--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
+[submodule "foundry-fund-me-Github/lib/chainlink-brownie-contracts"]
+	path = foundry-fund-me-Github/lib/chainlink-brownie-contracts
+	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
+[submodule "foundry-fund-me-Github/lib/foundry-devops"]
+	path = foundry-fund-me-Github/lib/foundry-devops
+	url = https://github.com/Cyfrin/foundry-devops
 [submodule "foundry-fund-me-Github/lib/forge-std"]
 	path = foundry-fund-me-Github/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
